# workshop-server

./: .env  .gitignore  Cargo.toml  LICENSE  README.md
client/: Boiding.elm  Domain.elm  Makefile  README.md  elm-package.json  elm.json
client/src/: Boiding.elm  Domain.elm  Simulation.elm
client/src/Domain/: Boid.elm  Flock.elm  Food.elm  Team.elm
src/: lib.rs  main.rs
src/brain/: communication.rs  mod.rs  model.rs
src/clock/: mod.rs
src/communication/: mod.rs
src/heartbeat/: communication.rs  mod.rs
src/model/: communication.rs  mod.rs
src/register/: handler.rs  mod.rs  model.rs
src/server/: handler.rs  mod.rs  register.rs
src/simulation/: communication.rs  mod.rs
src/websocket/: communication.rs  mod.rs
static/: client.js  index.html
static/css/: boiding.css
static/js/: app.js  client.js  client.min.js
