[package]
name = "bws"
version = "0.1.0"
authors = ["Daan van Berkel <daan.v.berkel.1980@gmail.com>"]

[dependencies]
log = "0.3.8"
simplelog = "0.4.3"
dotenv = "0.9.0" 
ws = "*"
serde = "1.0.15"
serde_json = "1.0.3"
serde_derive = "1.0.15"
futures = "0.1"
hyper = "0.11"
tokio-core = "0.1"

[dependencies.iron]
version = "0.5.1"

[dependencies.staticfile]
version = "*"

[dependencies.router]
version = "0.5.1"

[dependencies.mount]
git = "https://github.com/iron/mount.git"
tag = "0.3.0"

[dependencies.logger]
git = "https://github.com/iron/logger.git"

