[package]
name = "bws"
version = "0.1.0"
authors = ["Daan van Berkel <daan.v.berkel.1980@gmail.com>"]

[dependencies]
log = "0.4.8"
simplelog = "0.7.4"
dotenv = "0.15.0" 
ws = "0.9.1"
serde = "1.0.101"
serde_json = "1.0.41"
serde_derive = "1.0.101"
futures = "0.1.29"
hyper = "0.11"
tokio-core = "0.1"

[dependencies.iron]
version = "0.6.1"

[dependencies.staticfile]
version = "0.5.0"

[dependencies.router]
version = "0.6.0"

[dependencies.mount]
version = "0.4.0"

[dependencies.logger]
version = "0.4.0"
