[package]
name = "bws"
version = "0.1.0"
authors = ["Daan van Berkel <daan.v.berkel.1980@gmail.com>"]
edition = "2018"

[dependencies]
random = "0.12.2"
log = "0.4.8"
env_logger = "0.7.1"
dotenv = "0.15.0" 
ws = "0.9.1"
serde = "1.0.101"
serde_json = "1.0.41"
serde_derive = "1.0.101"
futures = "0.3"
hyper = "0.12.35"
tokio = { version = "0.2", features = ["full"] }
gotham = "0.4.0"